@@ -1,3 +1,7 @@
+2021-04-15 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Ask (once) for the correct interpretation of dots, when comma is decimal separator
+
 2021-04-13 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Avoid whole window updates when expression entry state changes from empty to non-empty
